; ModuleID = '/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/i386/extr_xboxmem.c_XboxMemGetMemoryMap.c'
source_filename = "/home/carl/AnghaBench/reactos/boot/freeldr/freeldr/arch/i386/extr_xboxmem.c_XboxMemGetMemoryMap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [23 x i8] c"XboxMemGetMemoryMap()\0A\00", align 1
@XboxMemoryMap = common dso_local global i32 0, align 4
@AvailableMemoryMb = common dso_local global i32 0, align 4
@LoaderFree = common dso_local global i32 0, align 4
@FrameBufferSize = common dso_local global i64 0, align 8
@FrameBuffer = common dso_local global i64 0, align 8
@LoaderFirmwarePermanent = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [13 x i8] c"Video memory\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @XboxMemGetMemoryMap(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = call i32 @TRACE(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %4 = load i32, i32* @XboxMemoryMap, align 4
  %5 = load i32, i32* @AvailableMemoryMb, align 4
  %6 = mul nsw i32 %5, 1024
  %7 = mul nsw i32 %6, 1024
  %8 = load i32, i32* @LoaderFree, align 4
  %9 = call i32 @SetMemory(i32 %4, i32 0, i32 %7, i32 %8)
  %10 = load i64, i64* @FrameBufferSize, align 8
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %19

12:                                               ; preds = %1
  %13 = load i32, i32* @XboxMemoryMap, align 4
  %14 = load i64, i64* @FrameBuffer, align 8
  %15 = trunc i64 %14 to i32
  %16 = load i64, i64* @FrameBufferSize, align 8
  %17 = load i32, i32* @LoaderFirmwarePermanent, align 4
  %18 = call i32 @ReserveMemory(i32 %13, i32 %15, i64 %16, i32 %17, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  br label %19

19:                                               ; preds = %12, %1
  %20 = load i32, i32* @XboxMemoryMap, align 4
  %21 = call i32 @PcMemFinalizeMemoryMap(i32 %20)
  %22 = load i32*, i32** %2, align 8
  store i32 %21, i32* %22, align 4
  %23 = load i32, i32* @XboxMemoryMap, align 4
  ret i32 %23
}

declare dso_local i32 @TRACE(i8*) #1

declare dso_local i32 @SetMemory(i32, i32, i32, i32) #1

declare dso_local i32 @ReserveMemory(i32, i32, i64, i32, i8*) #1

declare dso_local i32 @PcMemFinalizeMemoryMap(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
